// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Activity> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {size} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`<Activity> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": undefined,
        "padding": undefined,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": 8,
        "marginHorizontal": 4,
        "opacity": 0,
        "width": 8,
      }
    }
  />
</View>
`;
